--- a/src/components/Landing/LandingHome.css
+++ b/src/components/Landing/LandingHome.css
@@ -1,9 +1,12 @@
 .open{
     font-size: 25px;
+    border-radius: 18px;
+    margin-right: 40px;
+    margin-top: 20px;
 }
 
 .title{
-    font-size: 60px;
+    font-size: 50px;
 }
 
 .description{
