--- a/src/components/Landing/About/About.css
+++ b/src/components/Landing/About/About.css
@@ -9,7 +9,7 @@
 }
 
 @media only screen and (min-width: 600px) {
-    /* for tablet */
+    /* for Desktop */
     .image{
         width: 300px;
         height: 200px;
